--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Test Repo</title>
   </head>
   <body>
-
+    <form class="" action="index.html" method="post">
+      <input type="submit" name="" value="Submit">
+    </form>
   </body>
 </html>
